workspaces/DC Dev/DC Dev/src/objects/TriggerSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to control triggers.</description>
    <fields>
        <fullName>Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is set to true, the the account trigger would not execute.</description>
        <label>Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Update_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is set to true, Case Update Trigger will not execute.</description>
        <label>Case Update Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is set to true, Contact Trigger will not execute.</description>
        <label>Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Task_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is set to true, Create Task Trigger will not execute.</description>
        <label>Create Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is set to true, Lead Trigger will not execute.</description>
        <label>Lead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>TriggerSetting</label>
</CustomObject>